--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,5 +17,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "node-cache": "^5.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
