project rewrited for mongoDB integration

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ PORT=YOUR_PORT
 
 # The environment in which the application is running (e.g., development, production)
 NODE_ENV=YOUR_ENVIRONMENT
+
+# The URI of the MongoDB database
+DATABASE_URI=YOUR_MONGODB_URI
