jest implemented with test cases

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ NODE_ENV=YOUR_ENVIRONMENT
 
 # The URI of the MongoDB database
 DATABASE_URI=YOUR_MONGODB_URI
+
+# This is separate MongoDB database for testing
+TEST_DATABASE_URI=YOUR_TEST_MONGODB_URI
