--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-validator": "^7.2.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "node-cache": "^5.1.2"
