--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.0",
     "express-rate-limit": "^7.4.1",
     "express-validator": "^7.2.0",
+    "helmet": "^8.0.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "node-cache": "^5.1.2"
