cors settings updated

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ DATABASE_URI=YOUR_MONGODB_URI
 
 # This is separate MongoDB database for testing
 TEST_DATABASE_URI=YOUR_TEST_MONGODB_URI
+
+# Comma-separated list of allowed origins for CORS (e.g., http://localhost:3000,http://localhost:3001)
+ALLOWED_ORIGINS=YOUR_ALLOWED_ORIGINS
