--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "build": "tsc",
     "test": "set NODE_OPTIONS=--experimental-vm-modules && jest --config jest.config.json --detectOpenHandles --maxWorkers=6"
   },
@@ -25,16 +27,20 @@
     "node-cache": "^5.1.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.4",
     "@types/supertest": "^6.0.2",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.12.2"
   }
 }
