--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,5 @@
 {
-  "compilerOptions": {
-    "target": "ES2023",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "outDir": "./dist",
-    "rootDir": "./",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "declaration": false
-  },
+  "extends": "./tsconfig.base.json",
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["test/**/*"]
 }
