--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "arrowParens": "avoid",
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "tabWidth": 2,
   "semi": true,
+  "trailingComma": "es5",
+  "singleQuote": true,
   "printWidth": 100,
-  "bracketSpacing": true
+  "tabWidth": 2,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "arrowParens": "avoid"
 }
