--- a/jest.config.json
+++ b/jest.config.json
@@ -14,5 +14,20 @@
     ]
   },
   "testMatch": ["**/test/**/*.test.ts"],
-  "setupFilesAfterEnv": ["<rootDir>/test/config/jest.setup.ts"]
+  "setupFilesAfterEnv": ["<rootDir>/test/config/jest.setup.ts"],
+  "coverageThreshold": {
+    "global": {
+      "branches": 80,
+      "functions": 80,
+      "lines": 80,
+      "statements": 80
+    }
+  },
+  "collectCoverageFrom": [
+    "src/**/*.ts",
+    "!src/types/**/*.ts",
+    "!src/config/**/*.ts",
+    "!src/server.ts"
+  ],
+  "verbose": true
 }
