--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:watch": "npm test -- --watch",
     "test:coverage": "npm test -- --coverage",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "validate": "npm run lint & npm run test"
+    "validate": "npm run lint & npm run test",
+    "prepare": "husky init"
   },
   "keywords": [],
   "author": "",
@@ -39,12 +40,20 @@
     "@types/supertest": "^6.0.2",
     "eslint": "^9.13.0",
     "globals": "^15.11.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.10",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.12.2"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run lint:fix",
+      "npm run format"
+    ]
   }
 }
