--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,10 @@ NODE_ENV=YOUR_ENVIRONMENT
 # The URI of the MongoDB database
 DATABASE_URI=YOUR_MONGODB_URI
 
-# This is separate MongoDB database for testing
-TEST_DATABASE_URI=YOUR_TEST_MONGODB_URI
-
 # Comma-separated list of allowed origins for CORS (e.g., http://localhost:3000,http://localhost:3001)
 ALLOWED_ORIGINS=YOUR_ALLOWED_ORIGINS
+
+# Rate Limit Configuration
+RATE_LIMIT_WINDOW_MS=YOUR_RATE_LIMIT_WINDOW_MS
+RATE_LIMIT_MAX=YOUR_RATE_LIMIT_MAX
+
